--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,10 @@
 {erl_opts, [debug_info, warnings_as_errors]}.
 
 {deps, [
-  {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "2.0.1"}}},
-  {uuid, ".*", {git, "git://github.com/travis/erlang-uuid.git", "master"}},
-  {mochijson2, ".*", {git, "git://github.com/bjnortier/mochijson2.git", "master"}},
-  {erlzmq, ".*", {git, "git://github.com/zeromq/erlzmq2.git", "master"}}
+  {lager, ".*", {git, "https://github.com/basho/lager.git", {tag, "2.0.1"}}},
+  {uuid, ".*", {git, "https://github.com/travis/erlang-uuid.git", "master"}},
+  {mochijson2, ".*", {git, "https://github.com/bjnortier/mochijson2.git", "master"}},
+  {erlzmq, ".*", {git, "https://github.com/zeromq/erlzmq2.git", "master"}}
 ]}.
 
 {cover_enabled, true}.
